<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#424242" >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/noch_nichts_erkannt"
        android:gravity="center"
        android:id="@+id/eView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/border_display"/>

    <Button
        android:layout_width="150dp"
        android:background="@drawable/mybutton_selector_color"
        android:layout_height="50dp"
        android:text="@string/labern"
        android:id="@+id/bSpeak"
        android:layout_marginBottom="68dp"
        android:layout_above="@+id/bAbout"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:background="@drawable/mybutton_selector_color"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/okay"
        android:id="@+id/bOkay"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/eView"
        android:layout_alignEnd="@+id/eView" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:background="@drawable/mybutton_selector_color"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/entf"
        android:id="@+id/bClear"
        android:layout_alignTop="@+id/bOkay"
        android:layout_alignStart="@+id/eView" />


    <Button
        style="?android:attr/buttonStyleSmall"
        android:background="@drawable/mybutton_selector_color"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:text="@string/about"
        android:textSize="12sp"
        android:id="@+id/bAbout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:background="@drawable/mybutton_selector_color"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/zeige"
        android:id="@+id/bShow"
        android:layout_alignBottom="@+id/bOkay"
        android:layout_centerHorizontal="true" />

</RelativeLayout>